--- a/cart/cart.css
+++ b/cart/cart.css
@@ -23,8 +23,7 @@ html,body{
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-    height:100%;
-
+    height:150%;
 }
 .cart-top{
     display: flex;
@@ -46,7 +45,7 @@ html,body{
     font-weight: normal;
     font-size: 0.875rem;
     line-height: 1.063rem;
-    margin-right: 24px;
+    margin-right: 1.5rem;
 }
 .remove-text{
     color: #FA6161;
@@ -78,7 +77,7 @@ html,body{
     margin-left: 1.875rem;
 }
 
-.buy-btn{
+.cart-btn{
     color: white;
     border: none;
     background: #2CB674;
@@ -132,4 +131,26 @@ html,body{
     align-items: center;
     justify-content: center;
     margin-top: 1rem;
+}
+
+.cart-display{
+    display: block;/*none to hide*/
+}
+.empty-cart{
+    display: none; /*display:flex to show empty card page*/
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.empty-img{
+    margin: 6.25rem 4.375rem 2.5rem rem4.375;
+    height: 14.5rem;
+    width: 14.5rem;
+}
+.cart-text{
+    margin-top: 0.375rem;
+    font-size: 1.375rem;
+    width:12.5rem ;
+    text-align: center;
+    line-height: 1.625rem;
 }
