update font link Relates #35

--- a/login/login.css
+++ b/login/login.css
@@ -1,31 +1,31 @@
 @font-face {
     font-family: "Gilroy-Light";
-    src: url("assets/font/Gilroy-Light.ttf");
+    src: url("../assets/font/Gilroy-Light.ttf");
   }
   
   @font-face {
     font-family: "Gilroy-Regular";
-    src: url("assets/font/Gilroy-Regular.ttf");
+    src: url("../assets/font/Gilroy-Regular.ttf");
   }
   
   @font-face {
     font-family: "Gilroy-Medium";
-    src: url("assets/font/Gilroy-Medium.ttf");
+    src: url("../assets/font/Gilroy-Medium.ttf");
   }
   
   @font-face {
     font-family: "Gilroy-Bold";
-    src: url("assets/font/Gilroy-Bold.ttf");
+    src: url("../assets/font/Gilroy-Bold.ttf");
   }
   
   @font-face {
     font-family: "Gilroy-ExtraBold";
-    src: url("assets/font/Gilroy-ExtraBold.otf");
+    src: url("../assets/font/Gilroy-ExtraBold.otf");
   }
   
   @font-face {
     font-family: "Gilroy-Heavy";
-    src: url("assets/font/Gilroy-Heavy.ttf");
+    src: url("../assets/font/Gilroy-Heavy.ttf");
   }
   
   html {
