--- a/createAccount/createAccount.css
+++ b/createAccount/createAccount.css
@@ -50,13 +50,13 @@ label, p,button{
     text-align: center;
 }
 
-h1{
+.container h1{
     margin-top: 70px;
     font-size: 30px;
     font-family: "Gilroy-Bold";
 }
 
-p{
+.container p{
     margin-top: 20px;
     font-size: 14px;
 }
@@ -78,7 +78,10 @@ p{
   }
   
 /* Inputs Style */
-input[type=text], input[type=password], #currency{
+.nameIcon input,
+.pswIcon input,
+.mailIcon input,
+#currency{
     width: 300px;
     height: 50px;
     display: inline-block;
@@ -127,7 +130,7 @@ input[type=text], input[type=password], #currency{
     top: 38px;
     padding: 9px 8px;
 }
-.mailIcon input[type=text]{
+.mailIcon input[type=email]{
     padding-left: 40px;
 }
 .mailIcon img[class="mailimg"]{
@@ -147,7 +150,7 @@ input[type=text], input[type=password], #currency{
     top: 38px;
     padding: 9px 8px;
 }
-.pswIcon input[type=password]{
+.pswIcon input{
     padding-left: 40px;
 }
 .pswIcon img[class="hidePsw"]{
@@ -159,7 +162,7 @@ input[type=text], input[type=password], #currency{
 }
 
 /* Style label text */
-  label {
+.nameIcon label, .mailIcon label,.pswIcon label,.currency label {
     display:block;
     width: 300px;
     height:auto; 
@@ -180,3 +183,12 @@ input[type=text], input[type=password], #currency{
     margin: 0 auto;
     font-size: 18px;
     } 
+/* style signup error massage */
+#msgMail,
+#msgEmpty {
+  font-family: "Gilroy-Regular";
+  color: red;
+  font-size: 14px;
+  margin-top: 0px;
+  display: none;
+}
