add code so user can show or hide password in login page, and modify css for icon Relates #67

--- a/login/login.css
+++ b/login/login.css
@@ -121,7 +121,7 @@
     top: 38px;
     padding: 9px 8px;
   }
-  .pswIcon input[type=password]{
+  .pswIcon input{
     padding-left: 40px;
   }
   .pswIcon img[class="hidePsw"]{
