--- a/details/details.css
+++ b/details/details.css
@@ -17,6 +17,9 @@
   src: url(../assets/font/Gilroy-Medium.ttf);
 }
 
+body{
+    background: rgb(0, 0, 0, 0.3);
+}
 .backBtn {
   background: none;
   border: none;
@@ -27,12 +30,14 @@
   padding: 0;
   cursor: pointer;
   font-family: "Gilroy-Regular";
+  margin-right: 300px;
 }
 
 .details {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: white;
 }
 
 .categoryPrice {
@@ -139,6 +144,7 @@
   display: flex;
   justify-content: space-between;
   width: 85%;
+  padding-bottom: 30px;
 }
 
 .buy {
@@ -165,4 +171,44 @@
   cursor: pointer;
   font-family: "Gilroy-Medium";
   font-size: 18px;
+}
+
+#productImage{
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
+}
+
+@media(min-width: 600px) {
+    body{
+        display: flex;
+        justify-content:flex-end;
+        align-items: flex-end;
+        background-color: rgb(0, 0, 0, 0.3);
+        flex-direction: column;
+    }
+
+    .details {
+        width: 375px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: white;
+    }
+
+    .backBtn {
+        background: none;
+        border: none;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: 20px 0 20px 25px;
+        padding: 0;
+        cursor: pointer;
+        font-family: "Gilroy-Regular";
+        margin-right: 300px;
+      }
+
+
+    
 }
