--- a/cart/cart.css
+++ b/cart/cart.css
@@ -23,6 +23,7 @@ html,body{
     display: flex;
     flex-direction: column;
     justify-content:space-between;
+    align-items: center;
     height:150%;
 }
 .cart-top{
@@ -142,6 +143,7 @@ html,body{
 }
 .empty-cart{
     display: none; /*display:flex to show empty card page*/
+    margin-top: 6rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
