--- a/details/details.css
+++ b/details/details.css
@@ -34,6 +34,7 @@ body{
 }
 
 .details {
+  height: 812px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,10 +54,13 @@ body{
 }
 
 .priceTag {
-  display: flex;
-  font-family: "Gilroy-Bold";
-  font-size: 22px;
+  width: 102px;
+    display: flex;
+    font-family: "Gilroy-Bold";
+    font-size: 22px;
+    justify-content: space-between;
 }
+
 
 .title {
   font-size: 18px;
@@ -87,6 +91,7 @@ body{
   justify-content: space-between;
   align-items: center;
   margin-bottom: 35px;
+  margin-top: 8px;
 }
 
 .quantity {
@@ -104,10 +109,10 @@ body{
 
 .price {
   display: flex;
-  flex-direction: row;
-  width: 25%;
-  justify-content: space-between;
-  align-items: center;
+    flex-direction: row;
+    width: 30%;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .ttl {
@@ -145,6 +150,7 @@ body{
   justify-content: space-between;
   width: 85%;
   padding-bottom: 30px;
+  margin-top: 30px;
 }
 
 .buy {
