--- a/details/details.css
+++ b/details/details.css
@@ -34,6 +34,7 @@ body{
 }
 
 .details {
+  height: 812px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,10 +54,13 @@ body{
 }
 
 .priceTag {
-  display: flex;
-  font-family: "Gilroy-Bold";
-  font-size: 22px;
+  width: 102px;
+    display: flex;
+    font-family: "Gilroy-Bold";
+    font-size: 22px;
+    justify-content: space-between;
 }
+
 
 .title {
   font-size: 18px;
@@ -87,6 +91,7 @@ body{
   justify-content: space-between;
   align-items: center;
   margin-bottom: 35px;
+  margin-top: 8px;
 }
 
 .quantity {
@@ -104,10 +109,10 @@ body{
 
 .price {
   display: flex;
-  flex-direction: row;
-  width: 25%;
-  justify-content: space-between;
-  align-items: center;
+    flex-direction: row;
+    width: 30%;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .ttl {
@@ -129,7 +134,7 @@ body{
   font-size: 20px;
 }
 
-.plus {
+.plusItem {
   background-color: #f7f7f7;
   border: none;
   width: 30px;
@@ -145,6 +150,7 @@ body{
   justify-content: space-between;
   width: 85%;
   padding-bottom: 30px;
+  margin-top: 30px;
 }
 
 .buy {
@@ -190,10 +196,12 @@ body{
 
     .details {
         width: 375px;
+        height: 975px;
         display: flex;
         flex-direction: column;
         align-items: center;
         background: white;
+        justify-content: space-evenly;
     }
 
     .backBtn {
@@ -211,4 +219,75 @@ body{
 
 
     
+}
+
+.buyMsg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, 0.3);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.msgcontainer h1 {
+  font-family: "Gilroy-Bold";
+  font-size: 22px;
+  margin-top: 30px;
+}
+
+.msgBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.msgcontainer {
+  width: 300px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 24vh;
+  background: #ffffff;
+  box-shadow: 0px 8px 24px rgba(128, 128, 128, 0.15);
+  border-radius: 20px;
+  position: relative;
+}
+.msgcontainer p {
+  font-size: 18px;
+  font-family: "Gilroy-Regular";
+  padding-right: 11px;
+  margin-left: 19px;
+  margin-right: 20px;
+  text-align: center;
+  margin-bottom: 39px;
+  margin-top: 20px;
+}
+
+.submitBtn {
+  background-color: #2cb674;
+  color: #ffffff;
+  border: none;
+  border-radius: 50px;
+  height: 50px;
+  width: 250px;
+  display: block;
+  margin: 0 auto;
+  font-size: 18px;
+}
+
+.plus {
+  width: 28.21px;
+  height: 28.21px;
+  transform: rotate(45deg);
+  position: absolute;
+  bottom: 88%;
+  left: 85%;
+  border: none;
+  cursor: pointer;
 }
