--- a/details/details.css
+++ b/details/details.css
@@ -21,6 +21,7 @@ body{
     background: rgb(0, 0, 0, 0.3);
 }
 .backBtn {
+  width: 100%;
   background: none;
   border: none;
   display: flex;
@@ -30,10 +31,11 @@ body{
   padding: 0;
   cursor: pointer;
   font-family: "Gilroy-Regular";
-  margin-right: 300px;
+  margin-left: 40px;
 }
 
 .details {
+  overflow: hidden;
   height: 812px;
   display: flex;
   flex-direction: column;
@@ -54,17 +56,17 @@ body{
 }
 
 .priceTag {
-  width: 102px;
+  width: 90px;
     display: flex;
     font-family: "Gilroy-Bold";
     font-size: 22px;
-    justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 }
 
 #priceTag{
-  font-family: 'Gilroy-Regular';
-  font-size: 16px;
+  font-family: 'Gilroy-Medium';
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 
@@ -116,30 +118,27 @@ body{
 
 .price {
   display: flex;
-    flex-direction: row;
-    width: 35%;
+    width: 140px;
     align-items: center;
-    justify-content: space-between;
 }
 
 .ttl {
   font-family: "Gilroy-Regular";
+  margin-right: 5px;
 }
 
 .totalPrice {
   display: flex;
-  width: 65px;
-  flex-direction: row;
-  align-items: flex-end;
+  width: 90px;
+  align-items: center;
   font-family: "Gilroy-Bold";
   font-size: 22px;
-  justify-content: space-between;
 }
 
 .totalPrice #priceTag{
-  font-family: 'Gilroy-Regular';
-  font-size: 16px;
-  margin-left: 7px;
+  font-family: 'Gilroy-Medium';
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 .minus {
@@ -210,33 +209,18 @@ body{
         align-items: flex-end;
         background-color: rgb(0, 0, 0, 0.3);
         flex-direction: column;
+        height: 100vh;
     }
 
     .details {
-        width: 375px;
-        height: 975px;
+        width: 35%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        background: white;
         justify-content: space-evenly;
     }
-
-    .backBtn {
-        background: none;
-        border: none;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 20px 0 20px 25px;
-        padding: 0;
-        cursor: pointer;
-        font-family: "Gilroy-Regular";
-        margin-right: 300px;
-      }
-
-
-    
+  
 }
 
 .buyMsg{
